[gd_scene load_steps=16 format=3 uid="uid://b20okmvvv0lbo"]

[ext_resource type="PackedScene" uid="uid://c1wqqi6o7q7gc" path="res://tag.tscn" id="1_c0kr4"]
[ext_resource type="Script" path="res://main.gd" id="1_mvdym"]
[ext_resource type="Texture2D" uid="uid://cyljrys1bon5y" path="res://Assets/Icons/add.svg" id="2_chitn"]
[ext_resource type="FontFile" uid="uid://b80gaa8tr65sc" path="res://Assets/Fonts/Poppins-Medium.ttf" id="2_g7qbu"]
[ext_resource type="Script" path="res://tags.gd" id="3_7u0co"]
[ext_resource type="PackedScene" uid="uid://dcw6byestgh6w" path="res://clip.tscn" id="3_dyp5s"]
[ext_resource type="Script" path="res://clips.gd" id="4_a8xkp"]
[ext_resource type="Texture2D" uid="uid://tlifjouskqgj" path="res://Assets/Icons/refresh.svg" id="8_a00l1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cxv5"]
bg_color = Color(0.2793, 0.331975, 0.49, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 25.0
expand_margin_top = 25.0
expand_margin_right = 25.0
expand_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tspsn"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pgoto"]
bg_color = Color(0.1862, 0.282403, 0.49, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n5lk4"]
bg_color = Color(0.3276, 0.42336, 0.63, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qoy2q"]
bg_color = Color(0.1147, 0.195545, 0.37, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id="Theme_ppnxp"]
default_font = ExtResource("2_g7qbu")
Button/font_sizes/font_size = 20
Button/styles/hover = SubResource("StyleBoxFlat_pgoto")
Button/styles/normal = SubResource("StyleBoxFlat_n5lk4")
Button/styles/pressed = SubResource("StyleBoxFlat_qoy2q")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8hy8"]
bg_color = Color(0.2584, 0.26928, 0.34, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mvdym")
tag_scene = ExtResource("1_c0kr4")
clip_scene = ExtResource("3_dyp5s")
target_folder = "C:/Users/shufl/Documents/TestingFolder"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Clips" type="HFlowContainer" parent="HBoxContainer/MarginContainer2/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_a8xkp")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 45

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer"]
z_index = -4087
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5cxv5")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MarginContainer"]
clip_contents = false
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tags" type="VBoxContainer" parent="HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 45
script = ExtResource("3_7u0co")

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxFlat_tspsn")

[node name="NewTag" type="Button" parent="HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_ppnxp")
text = "Add New Tag"
icon = ExtResource("2_chitn")
expand_icon = true

[node name="Refresh" type="Button" parent="HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_ppnxp")
text = "Refresh"
icon = ExtResource("8_a00l1")
expand_icon = true

[node name="Panel" type="Panel" parent="."]
z_index = -4096
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w8hy8")

[connection signal="clip_deleted" from="HBoxContainer/MarginContainer2/ScrollContainer/Clips" to="." method="_on_clips_clip_deleted"]
[connection signal="clip_opened" from="HBoxContainer/MarginContainer2/ScrollContainer/Clips" to="." method="_on_clips_clip_opened"]
[connection signal="clip_opened_in_explorer" from="HBoxContainer/MarginContainer2/ScrollContainer/Clips" to="." method="_on_clips_clip_opened_in_explorer"]
[connection signal="clip_selected" from="HBoxContainer/MarginContainer2/ScrollContainer/Clips" to="." method="_on_clips_clip_selected"]
[connection signal="gui_input" from="HBoxContainer/MarginContainer2/ScrollContainer/Clips" to="." method="_on_clips_gui_input"]
[connection signal="new_tag_requested" from="HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/Tags" to="." method="_on_tags_new_tag_requested"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/NewTag" to="." method="_on_new_tag_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/Refresh" to="." method="_on_refresh_pressed"]
